[project]
name = "cline-core"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adem Gaygusuz", email = "adem@ardweb.co.uk" }
]
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "build",
    "grpcio-tools>=1.64.0",
    "grpcio>=1.64.0",
    "mypy-protobuf",
    "pytest>=9.0.1",
    "python-semantic-release>=10.5.2",
]

[tool.uv.build.hooks]
pre_build = "python -m grpc_tools.protoc --proto_path=./src/cline_core/proto --python_out=./src/cline_core/proto --grpc_python_out=./src/cline_core/proto src/cline_core/proto/**/*.proto"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
allow_zero_version = true
major_on_zero = false
